Fix contrast in event-meta

--- a/cfgov/unprocessed/css/on-demand/event.less
+++ b/cfgov/unprocessed/css/on-demand/event.less
@@ -95,7 +95,7 @@
   }
 
   .event-meta {
-    color: var(--gray-40);
+    color: var(--gray-90);
   }
 }
 
